Add badge processing and update GameServiceImpl.